[tool.poetry]
name = "petdeface"
version = "0.2.2"
description = "A nipype PET and MR defacing pipeline for BIDS datasets utilizing FreeSurfer's MiDeFace."
authors = ["Martin Nørgaard <martin.noergaard@nru.dk>", "Anthony Galassi <28850131+bendhouseart@users.noreply.github.com>", "Murat Bilgel <bilgelm@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "petdeface/*",
    "pyproject.toml",
    "data/sub-01/ses-baseline/anat/sub-01_ses-baseline_T1w.nii.gz",
    "data/sub-01/ses-baseline/anat/sub-01_ses-baseline_T1w.json",
    "data/sub-mni305/anat/sub-mni305_T1w.nii.gz",
    "data/sub-mni305/anat/sub-mni305_T1w.json",
]

# please update the bids version to the latest compliant version when making modifications to this code here
[tool.bids]
bids_version = "1.8.0"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
setuptools = "^68.1.2"
petutils = "^0.0.1"
niworkflows = "^1.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^3.0.1"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[build-system]
requires = ["poetry-core", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-data = { "petdeface" = [ "data/sub-01/ses-baseline/anat/*.nii", "data/sub-01/ses-baseline/anat/*.json", "data/sub-mni305/anat/sub-mni305_T1w.nii.gz", "data/sub-mni305/anat/sub-mni305_T1w.json"]}

[tool.poetry.scripts]
petdeface = 'petdeface.petdeface:main'
